Fix(SB-156): fix scrollbars (#34)
* fix(SB-156): fix scrollbars on pages

* fix(SB-156): update commit msg validation with feat

* fix(SB-156): remove unnecesarry comments and console logs and fixed unit mapping

* fix(SB-156): missing key in unloader overview

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -4,8 +4,8 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
 }
 
 /* Track */
@@ -18,7 +18,7 @@
 ::-webkit-scrollbar-thumb {
   background: #e0e0e0;
   border-radius: 100vh;
-  border: 3px solid #f7f7f7;
+  border: 1px solid #f7f7f7;
 }
 
 /* Handle on hover */
